--- a/config/database.yml
+++ b/config/database.yml
@@ -3,24 +3,26 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-#
-default: &default
-  adapter: postgresql
-  pool: 25
-  timeout: 5000
-
 development:
-  <<: *default
-  database: bloccit_development
+  adapter: sqlite3
+  database: db/cregis-bloccit_development.sqlite3
+  host: localhost
+  pool: 5
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: cregis-bloccit_test
+  adapter: sqlite3
+  database: db/cregis-bloccit_test.sqlite3
+  host: localhost
+  pool: 5
+  timeout: 5000
+
 
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: cregis-bloccit_production
 
